<resources>
    <string name="app_name">FinalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_library">Library</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="EmailAddress">Enter your email address:</string>
    <string name="TypeEmail">Type email here</string>
    <string name="TypePassword">Type your password:</string>
    <string name="ButtonText">LOGIN</string>
    <string name="profile">Your profile</string>

    <string name="textViewSearch">Search</string>
    <string name="editTextSearch">Artist\'s Name</string>
    <string name="buttonSearch">Search</string>

    <string name="textViewAlbum">Album</string>

    <string name="toast_messageRemoveFav">Album removed from Library</string>
    <string name="helpLibraryTitle">Library Tutorial</string>
    <string name="helpLibraryBody">To remove albums from Library activity press the red heart on the right side. Press any album to find information about it.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="written">Written by</string>
    <string name="help">Help</string>

    <!--search related strings-->

    <string name="toastResults">Search results for: </string>
    <string name="songBtn">songs</string>
    <string name="searchBtn">search</string>
    <string name="helpBtn">help</string>
    <string name="dialogTitle">Search Activity Tutorial</string>
    <string name="dialongBody">use the edit text to enter the name of an artist, when you press the search button the app will call the api and search for albums.</string>
    <string name="helpToast">You pressed the help button :)</string>
    <string name="favDialog">Add to favourites?</string>
    <string name="favYes">Yes</string>
    <string name="favNo">No</string>
</resources>